--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta property="og:title" content="macLinks — by Mehak ✨" />
-  <meta property="og:description" content="all my links in one place." />
-  <meta property="og:image" content="https://maclinks.vercel.app/preview.jpg" />
-  <meta property="og:url" content="https://maclinks.vercel.app/" />
-  <meta property="og:type" content="website" />
+<meta property="og:description" content="All my important links and aesthetic projects in one place!" />
+<meta property="og:image" content="https://raw.githubusercontent.com/mehakcheema12/Picture-/refs/heads/main/1000042409.jpg" />
+<meta property="og:url" content="https://links-henna-beta.vercel.app/" />
+<meta property="og:type" content="website" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links</title>
