--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+  <meta property="og:title" content="macLinks - by Mehak ✨" />
+<meta property="og:description" content="all my important stuff in one place" />
+
+<meta property="og:type" content="website" />
 <meta property="og:image" content="https://maclinks.vercel.app/a.jpg" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
