--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <div class="container">
         <header>
             <!-- Replace with your image -->
-            <img src="pfp.jpg" alt="Mehak" class="profile-img">
+            <img src="pfp~2.jpg" alt="Mehak" class="profile-img">
             <h1>Mehakpreet Kaur Cheema</h1>
             <p class="tagline">BTech CSE '28 @IKGPTU </p>
         </header>
