--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta property="og:description" content="all my important stuff in one place" />
 
 <meta property="og:type" content="website" />
-<meta property="og:image" content="https://maclinks.vercel.app/a.jpg" />
+<meta property="og:image" content="https://maclinks.vercel.app/links.jpg" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links</title>
